--- a/frontend/allpack/venues/venues.ejs
+++ b/frontend/allpack/venues/venues.ejs
@@ -755,7 +755,7 @@
                     <i class="fas fa-camera me-1"></i>PHOTO
                   </div>
                 <% } else { %>
-                  <video class="card-media" data-index="<%=globalIndex%>" preload="auto" playsinline muted autoplay loop>
+                  <video class="card-media" data-index="<%=globalIndex%>" preload="auto" playsinline  autoplay loop>
                     <source src="/all_disk/decor_images/<%=file.filePath%>" type="video/<%=file.filePath.split('.').pop()%>">
                   </video>
                   <!-- Video Badge -->
