--- a/frontend/allpack/photographers/edit.ejs
+++ b/frontend/allpack/photographers/edit.ejs
@@ -92,7 +92,7 @@
 
     <div class="mb-3">
       <label class="form-label required">Description</label>
-      <textarea name="description" rows="3" class="form-control" required><%= file.description%></textarea>
+      <textarea name="description" rows="3" class="form-control"><%= file.description%></textarea>
     </div>
 
     <div class="mb-3">
