--- a/frontend/allpack/photographers/add.ejs
+++ b/frontend/allpack/photographers/add.ejs
@@ -92,7 +92,7 @@
 
     <div class="mb-3">
       <label class="form-label required">Description</label>
-      <textarea name="description" rows="3" class="form-control" required></textarea>
+      <textarea name="description" rows="3" class="form-control"></textarea>
     </div>
 
     <div class="mb-3">
