--- a/frontend/home_packages/bookingformat.ejs
+++ b/frontend/home_packages/bookingformat.ejs
@@ -44,6 +44,7 @@
        <a href="/dashboard/decor" class="nav-link "><i class="fas fa-image"></i> Decor</a>
       <a href="/dashboard/troupe" class="nav-link "><i class="fas fa-drum"></i> Troupe</a>
       <a href="/dashboard/media" class="nav-link "><i class="fas fa-camera"></i> Photo & Video</a>  
+       <a href="/dashboard/catering" class="nav-link"><i class="fas fa-utensils me-2"></i> Catering</a>
     </div>
     <div class="mt-auto">&copy; <%= new Date().getFullYear() %> Wedding Planner Pro</div>
   </nav>
