--- a/frontend/allpack/indinzi/troup/troupformat.ejs
+++ b/frontend/allpack/indinzi/troup/troupformat.ejs
@@ -340,7 +340,8 @@
       <a href="/dashboard/decor" class="nav-link"><i class="fas fa-image"></i> Decor</a>
       <a href="/dashboard/troupe" class="nav-link active"><i class="fas fa-drum"></i> Troupe</a>
        <a href="/dashboard/media" class="nav-link "><i class="fas fa-camera"></i> Photo & Video</a>
-    </div>
+       <a href="/dashboard/catering" class="nav-link"><i class="fas fa-utensils me-2"></i> Catering</a>
+      </div>
     <div class="sidebar-footer">
       &copy; <%= new Date().getFullYear() %> Wedding Planner Pro
     </div>
