--- a/frontend/home_packages/suplyformat.ejs
+++ b/frontend/home_packages/suplyformat.ejs
@@ -47,7 +47,8 @@
        <a href="/dashboard/decor" class="nav-link "><i class="fas fa-image"></i> Decor</a>
       <a href="/dashboard/troupe" class="nav-link "><i class="fas fa-drum"></i> Troupe</a>
        <a href="/dashboard/media" class="nav-link "><i class="fas fa-camera"></i> Photo & Video</a>
-    </div>
+       <a href="/dashboard/catering" class="nav-link"><i class="fas fa-utensils me-2"></i> Catering</a>
+      </div>
     <div class="mt-auto text-center small text-white-50 py-3">
       &copy; <%= new Date().getFullYear() %> Wedding Planner Pro
     </div>
