--- a/frontend/allpack/catering/add.ejs
+++ b/frontend/allpack/catering/add.ejs
@@ -84,7 +84,7 @@
   <h2>Upload File</h2>
 
 
-  <form action="#" method="POST" enctype="multipart/form-data">
+  <form action="/upload/catering" method="POST" enctype="multipart/form-data">
     <div class="mb-3">
       <label class="form-label required">Title</label>
       <input type="text" name="title"  class="form-control" required>
@@ -102,7 +102,7 @@
     </div>
     <div class="d-grid gap-2">
       <button type="submit" class="btn btn-save btn-lg">Save Changes</button>
-    <a href="#" class="btn btn-save btn-lg">Go Back</a>
+    <a href="/dashboard/catering" class="btn btn-save btn-lg">Go Back</a>
 
     </div>
   </form>
