--- a/frontend/allpack/catering/edit.ejs
+++ b/frontend/allpack/catering/edit.ejs
@@ -87,11 +87,11 @@
 
     <div class="mb-3">
       <label class="form-label required">Title</label>
-      <input type="text" name="title" value= <%= file.title  %> class="form-control" required>
+      <input type="text" name="title" value= <%= file.title  %> class="form-control">
     </div>
 
     <div class="mb-3">
-      <label class="form-label required">Description</label>
+      <label class="form-label ">Description</label>
       <textarea name="description" rows="3" class="form-control"><%= file.description %></textarea>
     </div>
 
