--- a/frontend/allpack/catering/add.ejs
+++ b/frontend/allpack/catering/add.ejs
@@ -91,7 +91,7 @@
     </div>
 
     <div class="mb-3">
-      <label class="form-label required">Description</label>
+      <label class="form-label">Description</label>
       <textarea name="description" rows="3" class="form-control"></textarea>
     </div>
 
